# neuroswarm-ai

./: .env.example  .gitignore  .solana-dev.md  ADVANCED_FEATURES.md  ARCHITECTURE.md  AUTONOMY.md  Anchor.toml  COMPLETE.md  CONTRIBUTING.md  DASHBOARD_SETUP.md  DEPLOYMENT_SUMMARY.md  FINAL_STATUS.md  LAYMAN_GUIDE.md  LICENSE  PHASE2_COMPLETE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  SOLANA_BEST_PRACTICES.md  START_HERE_WINDOWS.md  SUBMISSION.md  SUCCESS_SUMMARY.md  WINDOWS_SETUP.md  check-install.bat  codama.config.mjs  package.json  requirements.txt  run_swarm.py  setup-windows.ps1  surfpool.toml  tsconfig.json
agents/: agent_marketplace.py  analytics_agent.py  arbitrage_agent.py  base_agent.py  consensus_agent.py  custom_agent_builder.py  enhanced_learning_agent.py  learning_agent.py  risk_agent.py  sentiment_agent.py
dashboard/: .env.example  README.md  next.config.js  package.json  tailwind.config.js
data/: learning_history.db
demos/: portfolio_manager.py  portfolio_manager_offline.py
governance/: coalition.py
integrations/: jupiter_client.py
mobile/: .gitignore  README.md  package.json
programs/agent_swarm/: Cargo.toml
programs/agent_swarm/src/: constants.rs  cpi.rs  errors.rs  lib.rs  marketplace.rs  state.rs
programs/agent_swarm/src/instructions/: create_proposal.rs  execute_proposal.rs  initialize.rs  mod.rs  record_outcome.rs  register_agent.rs  update_reputation.rs  vote_proposal.rs
programs/agent_swarm/tests/: litesvm_tests.rs
scripts/: calc_discriminators.py  check_agent_status.py  demonstrate_coordination.py  (+5 more)
(+44 files in other folders)
