[package]
name = "agent_swarm"
version = "0.1.0"
description = "Solana Agent Swarm Intelligence Protocol - Multi-Agent Coordination System"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_swarm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.18"

[dev-dependencies]
litesvm = "0.3"
mollusk-svm = "0.0.10"
solana-sdk = "1.18"
anchor-client = "0.29.0"
